# yet-another-engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/common/: Singleton.h  utils.h
engine/include/engine/: AbstractObject.h  Camera.h  Enums.h  Listener.h  Mesh.h  Model.h  ModelBuilder.h  Resource.h  ResourceStorage.h  Scene3D.h  Shader.h  ShaderProgram.h  Texture.h  TexturedModel.h
engine/src/: Scene3D.cpp  Shader.cpp
engine/src/object/: AbstractObject.cpp
engine/src/object/model/: Mesh.cpp  Model.cpp  ModelBuilder.cpp  Texture.cpp  TexturedModel.cpp
engine/src/resource/: Resource.cpp
examples/: CMakeLists.txt
examples/3DObject_import_example/: main.cpp
examples/Scene3D_example/: main.cpp
exemples/Scene3D_exemple/: CMakeLists.txt  main.cpp
include/: AbstractObject.h  Camera.h  Model.h  ModelBuilder.h  ModelObject.h  PrimitiveObject.h  Resource.h  ResourceStorage.h  Scene3D.h  Shader.h  Texture.h
include/common/: Exceptions.h
include/engine/: ObjectBuilder.h  Resource.h  Scene3D.h  Shader.h  ShaderProgram.h
resource/model/: ball.dae  cube-purple.dae  king.mtl
resource/shader/: color_in_fragment.glsl  color_in_vertex.glsl  fragment.glsl  fragment_with_texture.glsl  vertex.glsl  vertex_with_color.glsl  vertex_with_texture.glsl
src/: Camera.cpp  Model.cpp  Scene3D.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  main.cpp
src/object/: AbstractObject.cpp  ModelObject.cpp  ObjectBuilder.cpp  PrimitiveObject.cpp
src/object/model/: Model.cpp  ModelBuilder.cpp  TexturedModel.cpp
src/resource/: Resource.cpp  ResourceStorage.cpp
